Implemented the CLI interface Now the game can be played in a first crude way Implemented "interrupts" to let the CLI know when to show a game update Fixed some wrong client state transitions Fixed client handler not replying at all in case of wrong command received Fixed game parameters having one too many professor slots Fixed turn handling
Modified assistant playing so that they use relative ids when input by the users and throughout the application, instead of absolute ones
Fixed students not being put in the clouds and players' entrances when initializing the game
Fixed tests that were broken by the previous two changes